src/test/error/import3.lns
_lune_control single_phase_ast;

fn func() {
   import test.error.Sub5;
   import test.error.Sub6 as FOO;
   
   print( Sub5.Sub5enum.val1.$_txt );
   let test = new FOO.Test( 1 );
}

func();
